<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".Clock">

    <RelativeLayout
        android:id="@+id/player1Layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/greyed_out_button_padding"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player1Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_slab"
            android:letterSpacing="0.05"
            android:text="@string/_10_00"
            android:textAlignment="center"
            android:textColor="#202020"
            android:textSize="110sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player1MoveCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/moves_0"
            android:textColor="#202020"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/player1Time"
            android:fontFamily="@font/roboto_slab"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="35dp"
        android:paddingVertical="20dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/settings_icon"
            android:background="@drawable/light_ripple"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/clocksettings"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/playPauseButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@drawable/light_ripple"
            android:clickable="true"
            android:contentDescription="@string/playandpauseclock"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:scaleType="fitCenter"
            android:src="@drawable/play_icon" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/resetButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/reset_icon"
            android:background="@drawable/light_ripple"
            android:contentDescription="@string/resetclock"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/player2Layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/greyed_out_button_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player2Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_slab"
            android:letterSpacing="0.05"
            android:text="@string/_10_00"
            android:textAlignment="center"
            android:textColor="#202020"
            android:textSize="110sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/player2MoveCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/moves_0"
            android:textColor="#202020"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/player2Time"
            android:fontFamily="@font/roboto_slab"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>